--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  color: var(--background);
+  color: #ffffff;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
